packages/components/mc-tag/index.scss
$bg_color_bold: var(--mc-purple-500);
$bg_color_minimal: var(--mc-purple-50);
$bg_color_subtle: var(--mc-white);
$bg_color_bold_hover: var(--mc-purple-900);
$bg_color_minimal_hover: var(--mc-purple-100);
$bg_color_disabled: var(--mc-gray-400);
$bg_color_disabled_subtle: var(--mc-white);
$bg_color_info: var(--mc-info);
$bg_color_success: var(--mc-success);
$bg_color_cancel: var(--mc-gray-300);
$bg_color_warning: var(--mc-warning);
$bg_color_error: var(--mc-error);
$text_color_bold: var(--mc-white);
$text_color_minimal: var(--mc-purple-500);
$text_color_minimal_hover: var(--mc-white);
$text_color_subtle: var(--mc-purple-500);
$text_color_disabled: var(--mc-white);
$text_color_disabled_subtle: var(--mc-gray-400);
$text_color_status: var(--mc-white);

.mc-tag {
  width: fit-content;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 4px;
  cursor: pointer;

  /* type */
  &.mc-tag-basic {
    border-radius: 80px;
  }
  &.mc-tag-selectable {
    border-radius: 4px;
    /* hover */
    &:hover:not(.mc-tag-disabled) {
      &.mc-tag-bold {
        background-color: $bg_color_bold_hover;
      }
      &.mc-tag-minimal {
        color: $text_color_minimal_hover;
        background-color: $bg_color_minimal_hover;
      }
      &.mc-tag-subtle {
        border: 2px solid $text_color_subtle;
        &.mc-tag-x-small {
          padding: 0 7px;
        }
        &.mc-tag-small,
        &.mc-tag-medium {
          padding: 0 15px;
        }
      }
    }
  }

  /* size */
  &.mc-tag-x-small {
    min-width: 81px;
    height: 24px;
    padding: 0 8px;
    font-size: 12px;
    font-weight: 400;
  }
  &.mc-tag-small {
    min-width: 107px;
    height: 32px;
    padding: 0 16px;
    font-size: 14px;
    font-weight: 400;
  }
  &.mc-tag-medium {
    min-width: 107px;
    height: 40px;
    padding: 0 16px;
    font-size: 14px;
    font-weight: 400;
  }

  /* emphasis */
  &.mc-tag-bold {
    background-color: $bg_color_bold;
    color: $text_color_bold;
  }
  &.mc-tag-minimal {
    background-color: $bg_color_minimal;
    color: $text_color_minimal;
  }
  &.mc-tag-subtle {
    background-color: $bg_color_subtle;
    color: $text_color_subtle;
    border: 1px solid $text_color_subtle;
  }
  &.mc-tag-info {
    background-color: $bg_color_info;
    color: $text_color_status;
  }
  &.mc-tag-success {
    background-color: $bg_color_success;
    color: $text_color_status;
  }
  &.mc-tag-cancel {
    background-color: $bg_color_cancel;
    color: $text_color_status;
  }
  &.mc-tag-warning {
    background-color: $bg_color_warning;
    color: $text_color_status;
  }
  &.mc-tag-error {
    background-color: $bg_color_error;
    color: $text_color_status;
  }

  /* disabled */
  &.mc-tag-disabled {
    cursor: not-allowed;
    &.mc-tag-bold,
    &.mc-tag-minimal,
    &.mc-tag-info,
    &.mc-tag-success,
    &.mc-tag-cancel,
    &.mc-tag-warning,
    &.mc-tag-error {
      background-color: $bg_color_disabled;
      color: $text_color_disabled;
    }
    &.mc-tag-subtle {
      color: $text_color_disabled_subtle;
      background-color: $bg_color_disabled_subtle;
      border-color: $text_color_disabled_subtle;
    }
  }
}

